# arduino-libsbc

./: CMakeLists.txt  README.md  library.properties
src/: sbc.h
src/sbc/: formats.h  sbc.h  sbc_math.h  sbc_primitives.h  sbcdec.c  sbcenc.c  sbcinfo.c  sbctester.c
